# Seeing-Knowing

./: .gitignore  ARTIFACTS.md  README.md  REPRODUCIBILITY.md  pyproject.toml
plots/: example_plots.py  plot_functions.py
results/: appendix_mlp.csv  figure3_attention_summary_llava-next.csv  figure3_heads_gemma3.csv  figure4_intervention.csv
results/4_data_validation/: claude_haiku_validation_v2.json  gemini_flash_validation_v2.json  gpt4.1_validation_v2.json  gpt5_mini_validation_v2.json  human_validation_forms_viscomp_v1.csv  missing_in_claude_indices.json  seeing-knowing.csv  validation_claude-3.7-sonnet.json  validation_claude-3.7-sonnet_missed.json  validation_gemini_flash.json  validation_gpt5.json
results/paper_tables/: appendix_multik.csv  figure3_attention_summary_gemma3.csv  figure3_heads_llava-next.csv  figure4_intervention_full.csv  figure5_localization.csv
script/: 1_logitlens.py  2_intervention.py  3_pixel_localization.py  extend_target_tokens.py  generate_counterfactual.py  prepare_paper_results.py
script/experiment/0_logit_lens/: 1_logitlens.py
script/experiment/1_heads_ablation/: 1_experiment.py  2_full.py  3_multik.py  ablation_utils.py  run_visual_counterfact.sh
script/experiment/2_ImgCfactLocalization/: 1_full.py
script/experiment/3_mlp_ablation/: mlp_ablation.py
script/experiment/4_data_validation/: README.md  (+6 more)
script/plots/: Experiment2.R  experiment1.R  heads_heatmap.R  random.R  utils.R
src/: datastatistics.py  experiment_manager.py  orthogonality.py  overlap.py  paper_results.py  result_tables.py  utils.py  visual_attn.py
(+100 files in other folders)
